<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	android:orientation="vertical"
	android:visibility="visible">

	<android.support.v4.widget.NestedScrollView
		android:id="@+id/recordmain_scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none"
		android:visibility="visible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:orientation="vertical"
			android:visibility="visible">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical"
				android:layout_marginTop="15dp"
				android:padding="5dp"
				android:visibility="visible">

				<EditText
					android:id="@+id/recordmain_name_edittext"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@android:color/transparent"
					android:gravity="center"
					android:hint="事件名稱"
					android:padding="10dp"
					android:textColor="@color/text_color_1"
					android:maxLines="3"
					android:textColorHint="#999999"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical"
				android:padding="5dp"
				android:visibility="visible">

				<TextView
					android:id="@+id/recordmain_date_textview"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:padding="10dp"
					android:text="20 JAN"
					android:textColor="@color/text_color_1"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:padding="0dp"
				android:visibility="visible">

				<LinearLayout
					android:id="@+id/recordmain_income_btn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/a001_left_border_select"
					android:gravity="center"
					android:padding="5dp"
					android:visibility="visible">

					<TextView
						android:id="@+id/recordmain_income_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="收入"
						android:textColor="@color/text_color_1"
						android:visibility="visible"/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/recordmain_disbursement_btn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/a001_right_border_normal"
					android:gravity="center"
					android:padding="5dp"
					android:visibility="visible">

					<TextView
						android:id="@+id/recordmain_disbursement_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="支出"
						android:textColor="@color/text_color_1"
						android:visibility="visible"/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_newitem_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:gravity="center"
				android:minHeight="150dp"
				android:orientation="vertical"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="物品"
					android:textColor="@color/text_color_1"
					android:textSize="20sp"
					android:visibility="visible"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="點擊添加"
					android:textColor="@color/text_color_1"
					android:visibility="visible"/>

			</LinearLayout>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/recordmain_item_recyclerview"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:visibility="visible"/>

			<LinearLayout
				android:id="@+id/recordmain_total_amount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingTop="10dp"
				android:paddingRight="20dp"
				android:paddingBottom="10dp"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="center"
					android:text="@string/record_totalamount_text"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

				<TextView
					android:id="@+id/recordmain_total_amount_textview"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="right"
					android:text="$ 0.00"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_payment_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:minHeight="50dp"
				android:orientation="vertical"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="10dp"
					android:text="支付"
					android:textColor="@color/text_color_1"
					android:textSize="20sp"
					android:visibility="visible"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="20dp"
					android:text="點擊添加"
					android:textColor="@color/text_color_1"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_payment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingTop="10dp"
				android:paddingRight="20dp"
				android:paddingBottom="10dp"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="center"
					android:text="@string/record_payment_text"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

				<TextView
					android:id="@+id/recordmain_payment_textview"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="right"
					android:text="$ 0.00"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_exchange"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingTop="10dp"
				android:paddingRight="20dp"
				android:paddingBottom="10dp"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="center"
					android:text="@string/record_change_text"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

				<TextView
					android:id="@+id/recordmain_exchange_textview"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="right"
					android:text="$ 0.00"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_paymethod"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingTop="10dp"
				android:paddingRight="20dp"
				android:paddingBottom="10dp"
				android:visibility="gone">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="center"
					android:text="@string/record_method_text"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

				<TextView
					android:id="@+id/recordmain_paymethod_textview"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:gravity="right"
					android:text="現金"
					android:textColor="@color/text_color_1"
					android:textSize="14sp"
					android:textStyle="bold"
					android:visibility="visible"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/recordmain_remark"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="#444444"
					android:visibility="gone"/>

				<LinearLayout
					android:id="@+id/recordmain_remark_btn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:minHeight="50dp"
					android:orientation="vertical"
					android:visibility="visible">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="20dp"
						android:layout_marginBottom="10dp"
						android:text="備註"
						android:textColor="@color/text_color_1"
						android:textSize="20sp"
						android:visibility="visible"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="20dp"
						android:text="點擊添加"
						android:textColor="@color/text_color_1"
						android:visibility="visible"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="100dp"
					android:gravity="center|top"
					android:minHeight="150dp"
					android:orientation="vertical"
					android:visibility="visible">

					<TextView
						android:id="@+id/recordmain_remark_textview"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="left|top"
						android:text=""
						android:textColor="@color/text_color_1"
						android:visibility="visible"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:minHeight="80dp"
		android:visibility="gone">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_margin="10dp"
			android:background="@drawable/b001_cirle_btn"
			android:padding="10dp"
			android:visibility="gone">

			<ImageView
				android:id="@+id/clear_btn"
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:src="@mipmap/ic_save"
				android:tint="@color/text_color_1"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_margin="10dp"
			android:background="@drawable/b001_cirle_btn"
			android:padding="10dp"
			android:visibility="gone">

			<ImageView
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:src="@mipmap/ic_question_mark"
				android:tint="@color/text_color_1"/>

		</LinearLayout>

	</RelativeLayout>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/recordmain_fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerInParent="true"
		android:background="#444444"
		android:src="@mipmap/ic_plus_mark"
		app:fabSize="mini"
		android:layout_marginBottom="50dp"/>

</RelativeLayout>

